Настроена аутентификация OAUTH 2.0 между GateWay и CashInCashOut